test: ControllerTest
Signed-off-by: tison <wander4096@gmail.com>